--- a/2021frontend/index.html
+++ b/2021frontend/index.html
@@ -10,29 +10,69 @@
     <title>Refresher</title>
   </head>
   <body>
-    <img
-      id="mobile-cta"
-      class="mobile-menu"
-      src="images/menu.svg"
-      alt="Open Navigation"
-    />
-
-    <nav class="primary-nav">
+    <div class="navbar">
       <div class="container">
-        <a href="index.html">Koen<span class="logo">mekers</span></a>
+        <a class="logo" href="#">Remember<span>That</span></a>
+
+        <img
+          id="mobile-cta"
+          class="mobile-menu"
+          src="images/menu.svg"
+          alt="Open Navigation"
+        />
+
         <nav>
-          <ul>
+          <img
+            id="mobile-exit"
+            class="mobile-menu-exit"
+            src="images/exit.svg"
+            alt="Close Navigation"
+          />
+
+          <ul class="primary-nav">
             <li class="current"><a href="#">Home</a></li>
             <li><a href="#">Features</a></li>
             <li><a href="#">Pricing</a></li>
           </ul>
+
           <ul class="secondary-nav">
-            <li class=""><a href="#">Contact</a></li>
-            <li class="go-premium-cta"><a href="#">Go to premium</a></li>
-            41.14
+            <li><a href="#">Contact</a></li>
+            <li class="go-premium-cta"><a href="#">Go Premium</a></li>
           </ul>
         </nav>
       </div>
-    </nav>
+    </div>
+
+    <section class="hero">
+      <div class="container">
+        <div class="left-col">
+          <p class="subhead">It's nitty &amp; Gritty </p>
+          <h1> A Task app that doesn't Stink</h1>
+          <div class="hero-cta">
+            <a href="#" class="primary-cta">Try for free</a>
+            <a href="#" class="watch-video-cta">Try for free
+              <img src="images/watch.svg" alt="Watch a video">
+              Watch a video
+              </a>
+           
+          </div>
+        </div>
+      </div>
+      <img src="images/illustration.svg" class="hero-img"alt="illustration">
+    </section>
+<section class="features-section">
+  <div class="container">
+    <ul>
+      <li>Unlimited Tasks</li>
+      <li>SMS Task Reminders</li>
+      <li>Confetti Explosions upon Task Completions</li>
+      <li>Social Media Announcements</li>
+      <li>Real Time Collaboration</li>
+      <li>Other awesome features</li>
+    </ul>
+  </div>
+  <img src="images/holding-phone.jpg" alt="man foto aan het houden">
+</section>
+section.tes
   </body>
 </html>
